# primora

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
contracts/: .gitignore  README.md  foundry.toml
contracts/script/: Deploy.s.sol  README.md
contracts/src/: HouseEdge.sol  MiningContract.sol  NodeRegistry.sol  OracleAggregator.sol  PrimToken.sol  StakingContract.sol  Treasury.sol
contracts/src/mocks/: MockChainlinkFeed.sol
contracts/test/: HouseEdge.t.sol  MiningContract.t.sol  NodeRegistry.t.sol  OracleAggregator.t.sol  PrimToken.t.sol  StakingContract.t.sol  Treasury.t.sol
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: main.rs
crates/anomaly-engine/: Cargo.toml
crates/anomaly-engine/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: anomaly_engine.rs  http_endpoints.rs  postgres_store.rs  proof_validator.rs  rate_limiter.rs  session_manager.rs  twap_calculator.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/mint-ceiling/: Cargo.toml
crates/mint-ceiling/src/: lib.rs
crates/node-coordinator/: Cargo.toml  build.rs
crates/node-coordinator/src/: grpc.rs  lib.rs
crates/node-server/: Cargo.toml  build.rs
crates/node-server/src/: lib.rs  main.rs
crates/node-server/tests/: randomx_attestation.rs
crates/onchain-client/: Cargo.toml
crates/onchain-client/src/: lib.rs
crates/oracle-reader/: Cargo.toml
crates/oracle-reader/src/: lib.rs
crates/payout-calculator/: Cargo.toml
crates/payout-calculator/examples/: calibrate.rs
crates/payout-calculator/src/: lib.rs
crates/postgres-store/: Cargo.toml
crates/postgres-store/migrations/: 0001_anomaly_events.sql  0002_mint_proposals.sql  0003_mint_proposals_chain.sql  0004_mint_proposals_net_usd.sql
crates/postgres-store/src/: lib.rs
crates/proof-validator/: Cargo.toml
crates/proof-validator/src/: lib.rs
crates/randomx-verifier/: Cargo.toml
crates/randomx-verifier/examples/: gen_proof.rs
crates/randomx-verifier/src/: lib.rs
crates/rate-limiter/: Cargo.toml
crates/rate-limiter/src/: lib.rs
crates/session-manager/: Cargo.toml
crates/session-manager/src/: lib.rs
crates/twap-calculator/: Cargo.toml
crates/twap-calculator/src/: lib.rs
crates/verification-service/: Cargo.toml
crates/verification-service/src/: admin.rs  lib.rs  main.rs
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboard.yml
proto/: attestation.proto  node_service.proto
scripts/: demo_env.sh  demo_env_stop.sh  smoke_test_backend.sh  smoke_test_dualchain.sh  smoke_test_full_integration.sh  smoke_test_mint.sh  smoke_test_mint_dualchain.sh  smoke_test_staking_dualchain.sh  test_twap_submission.sh
