[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/verification-service",
  "crates/proof-validator",
  "crates/anomaly-engine",
  "crates/node-coordinator",
  "crates/onchain-client",
  "crates/session-manager",
  "crates/rate-limiter",
  "crates/mint-ceiling",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
alloy-primitives = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1"
redis = { version = "0.25", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
sha2 = "0.10"
alloy = { version = "0.3", features = ["providers", "rpc-types", "signers", "signer-local", "reqwest"] }
