[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/verification-service",
  "crates/proof-validator",
  "crates/anomaly-engine",
  "crates/node-coordinator",
  "crates/onchain-client",
  "crates/session-manager",
  "crates/rate-limiter",
  "crates/mint-ceiling",
  "crates/twap-calculator",
  "crates/postgres-store",
  "crates/metrics",
  "crates/integration-tests",
  "crates/node-server",
  "crates/oracle-reader",
  "crates/payout-calculator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
alloy-primitives = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
redis = { version = "0.25", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
sha2 = "0.10"
alloy = { version = "2.1", features = ["providers", "rpc-types", "signers", "signer-local", "reqwest", "contract", "sol-types"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "json"] }
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
