[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "primora-admin"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
postgres-store = { path = "../postgres-store" }
onchain-client = { path = "../onchain-client" }
alloy = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
