[package]
name = "node-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
alloy-primitives = { workspace = true, features = ["k256"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
