[package]
name = "onchain-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
alloy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
chrono = { workspace = true }
