[package]
name = "postgres-store"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
