[package]
name = "session-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
proof-validator = { path = "../proof-validator" }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
